# Data-Visualization-Final-Project

./: README.md  pyproject.toml  requirements.txt
app/: Engine_Atlas.py  utils.py
app/components/: engine_dna.py
app/components/engine_dna/: README.txt
app/pages/: 1_Trends.py  2_Brand_Battles.py  3_Best_Engines.py  4_Engine_Clusters.py
assets/: presentation_outline.md  styles.css
data/processed/: engine_atlas_cleaned.parquet
notebooks/: 01_cleaning.ipynb
src/engine_atlas/: __init__.py  data_processing.py
